docker-compose/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  name: access_log
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /dev/stdout
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: localhost
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: greeter_service
                            auto_host_rewrite: true
                            prefix_rewrite: "/v3/71b8283a-a7da-47fe-a9d8-fe1038c712df"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: greeter_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_refresh_rate: "5s"
      load_assignment:
        cluster_name: greeter_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: run.mocky.io
                      port_value: 80
      # # Add custom DNS resolver here
      # typed_dns_resolver_config:
      #   name: envoy.network.dns_resolver.cares
      #   typed_config:
      #     "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
      #     resolvers:
      #       - socket_address:
      #           address: 172.20.0.6
      #           port_value: 14520 
      #     udp_max_queries: 1     
    - name: greeter_service_2
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_refresh_rate: "5s"
      load_assignment:
        cluster_name: greeter_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80
      # # Add custom DNS resolver here
      # typed_dns_resolver_config:
      #   name: envoy.network.dns_resolver.cares
      #   typed_config:
      #     "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
      #     resolvers:
      #       - socket_address:
      #           address: 172.20.0.6
      #           port_value: 14520 
      #     udp_max_queries: 1            

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
